--- a/290920.ipynb
+++ b/290920.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPNsccgdnijN6eO2j9HUJaE",
+      "authorship_tag": "ABX9TyPCPRpCcQVw36GCddqoG/hw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,14 +53,14 @@
       "source": [
         "edad = 18"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LBCXWANj-rdT",
-        "outputId": "ee89e959-3e5c-48e3-e42e-705380a6992a",
+        "outputId": "1365e3cb-41be-4c5b-820b-4e3f77162b9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -69,7 +69,7 @@
       "source": [
         "print(edad)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,14 +88,14 @@
       "source": [
         "colores = [\"rojo\",\"azul\",\"verde\",\"morado\",\"violeta\"]"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Craaqaxp_e98",
-        "outputId": "3e0cb539-13e4-4ddb-da96-f2808274e17b",
+        "outputId": "e82b6063-810e-4292-e15a-43e8fc9944c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -104,7 +104,7 @@
       "source": [
         "print(colores)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
       "source": [
         "#sólo mostrar morado"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "8v_Ee5Lf_m_Q",
-        "outputId": "ca2d7d2d-4ede-429b-f534-5d1aad684d7f",
+        "outputId": "b1c0e3a8-fcbb-421c-b760-90d7d8a2abd3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -150,7 +150,7 @@
       "source": [
         "print(colores[3])"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +176,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "dNzAUmpvB-aT",
-        "outputId": "6147de5f-90a6-421c-e441-04c40765c8f2",
+        "outputId": "4a470b8d-b9ac-43f7-d4aa-5a1fdb54f5ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -185,7 +185,7 @@
       "source": [
         "print(colores[3][2:4])"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,14 +204,14 @@
       "source": [
         "nombre = \"Alberto\""
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "buUfEy71BoQH",
-        "outputId": "50fbdd65-6e53-45c1-8900-c5a40c8eae10",
+        "outputId": "76d80a0d-708a-4a76-ed65-e43908d312ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -220,7 +220,7 @@
       "source": [
         "print(nombre[0])"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,7 +235,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "PQQthBYUBu4C",
-        "outputId": "5166132e-b4b0-465e-9691-d4cc06b71a2a",
+        "outputId": "77bfb424-038b-4f43-e5d9-1524c76f509a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -244,7 +244,7 @@
       "source": [
         "print(nombre[0:3:1])"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,25 +284,26 @@
       "cell_type": "code",
       "metadata": {
         "id": "G8rAadOxDJ5e",
-        "outputId": "741032a9-2866-445f-b026-0ae132825587",
+        "outputId": "7e396c9b-1a3c-4dda-b7f8-e0f32980eb67",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 102
         }
       },
       "source": [
-        "for j in range (0,4,1):\n",
-        "  print(colores[3])"
+        "for j in range (0,5,1):\n",
+        "  print(colores[j])"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "rojo\n",
+            "azul\n",
+            "verde\n",
             "morado\n",
-            "morado\n",
-            "morado\n",
-            "morado\n"
+            "violeta\n"
           ],
           "name": "stdout"
         }
@@ -312,7 +313,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "GN3-sqt1DU1h",
-        "outputId": "74a8e9f5-9ca6-4821-b97b-f6917fdc481a",
+        "outputId": "a269c2ae-a97f-45d9-ea6d-3044db9ff611",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -321,7 +322,7 @@
       "source": [
         "print(colores[3])"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,20 +365,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bA6rxNbvEhuk"
+        "id": "bA6rxNbvEhuk",
+        "outputId": "10e20566-670b-4895-ac9b-27dca51efd16",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        }
       },
       "source": [
-        "for j in range (0, 1en(nombre), 1):\n",
+        "for j in range(0,len(nombre),1):\n",
         "  print(nombre[j])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "A\n",
+            "l\n",
+            "b\n",
+            "e\n",
+            "r\n",
+            "t\n",
+            "o\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "3MVriWKlE3if",
-        "outputId": "68add18a-1ec0-4fa2-db71-49299a0b80a9",
+        "outputId": "4a0c0b89-e043-41df-c3c7-1a5c958ffd82",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -386,12 +406,12 @@
       "source": [
         "print(nombre[j])"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "e\n"
+            "o\n"
           ],
           "name": "stdout"
         }
