Creado mediante Colaboratory

--- a/8octubre_1310.ipynb
+++ b/8octubre_1310.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "8octubre.ipynb",
+      "name": "8octubre_1310.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPirUOPfRnEp9iLIviLA7UW",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOWQTuVZK5hsMoJjUAhrwRX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -262,7 +263,7 @@
         "                        } \n",
         "          }\n",
         "#siempre va aproducir o un objeto en vacio o en pares\n",
-        "print(alumno['materias'])\n",
+        "print(alumno['materias'])#seleector\n",
         "print(alumno['promedio'])\n",
         "print(alumno['direccion']['estado']['nombre_corto'])"
       ],
